# tauri-fitbit

./: .env  .gitignore  .prettierignore  .prettierrc.json  LICENSE  README.md  next.config.js  package.json  webpack.config.js
public/data/: user_data.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/migrations/2023-02-24-023315_create_heartdata/: down.sql  up.sql
src-tauri/migrations/2023-02-26-222656_create_sleep/: down.sql  up.sql
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  mobile.rs
src-tauri/src/commands/: api_model.rs  helpers.rs
src-tauri/src/database/: connect.rs  db_model.rs  schema.rs
src/pages/: _app.tsx  index.tsx
